--- a/CarDealershipApi/Views/Home/Index.cshtml
+++ b/CarDealershipApi/Views/Home/Index.cshtml
@@ -6,10 +6,31 @@
 
 <h1><a href="/Home/ViewVehicleList">View Entire Vehicle List</a></h1>
 
+<h2>Search</h2>
+<form action="/Home/Search">
+    <div>
+        <label for="searchTerm">Search Term: </label>
+        <input type="text" name="searchTerm" required />
+    </div>
+    <div>
+        <label for="year">Year:</label>
+        <input type="radio" id="year" name="searchType" value="year" required />
+        <label for="color">Color: </label>
+        <input type="radio" id="color" name="searchType" value="color" required />
+        <label for="make">Make: </label>
+        <input type="radio" id="make" name="searchType" value="make" required />
+        <label for="make">Model: </label>
+        <input type="radio" id="model" name="searchType" value="model" required />
+    </div>
+    <div>
+        <input type="submit" />
+    </div>
+</form>
+
 <h2>View Individual Vehicle</h2>
 <form action="/Home/ViewIndividualVehicle" method="get">
     <div>
-        <label for="id">Vehicle ID:</label>
+        <label for="id">Vehicle ID: </label>
         <input type="number" name="id" required />
     </div>
     <div>
